# mp4_ai_analyzer

./: .gitignore  CMakeLists.txt  README.md
audio/: audio_player.h
audio/platform/: mac_audio_player.cpp  mac_audio_player.h
lib/: imagenet_labels_chinese.txt
lib/ffmpeg_install/lib/mac/pkgconfig/: libavcodec.pc  libavformat.pc
lib/ffmpeg_install/lib/pkgconfig/: libavdevice.pc  libavutil.pc  libswscale.pc
lib/onnxruntime/: GIT_COMMIT_ID
lib/onnxruntime/lib/: libonnxruntime.dylib
lib/onnxruntime/lib/mac/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
lib/onnxruntime/lib/pkgconfig/: libonnxruntime.pc
lib/opencv-install/include/opencv4/opencv2/: cvconfig.h
lib/opencv-install/lib/: libopencv_calib3d.4.6.0.dylib  libopencv_highgui.4.6.0.dylib  libopencv_imgcodecs.4.6.0.dylib  libopencv_ml.4.6.0.dylib  libopencv_video.4.6.0.dylib
lib/opencv-install/lib/cmake/opencv4/: OpenCVModules-release.cmake
lib/opencv-install/lib/mac/: libopencv_features2d.4.6.0.dylib  libopencv_flann.4.6.0.dylib  libopencv_objdetect.4.6.0.dylib  libopencv_photo.4.6.0.dylib  libopencv_stitching.4.6.0.dylib  libopencv_videoio.4.6.0.dylib
src/: ai_infer.cpp  ai_infer.h  cv_renderer.cpp  cv_renderer.h  data_struct.h  decoder.cpp  decoder.h  main.cpp  safe_queue.h
src/ai/: infer_engine.cpp  infer_engine.h  model_loader.cpp  model_loader.h
src/ai/preprocess/: image_preprocessor.cpp  image_preprocessor.h
src/common/: data_structs.h  media_frame.cpp  media_frame.h  platform.h
src/common/ai_infer/: ai_infer.h
src/common/decoder/: video_decoder.cpp
src/common/log/: log.cpp  log.h
src/common/render/: render_factory.h  renderer.h
src/common/util/: frame_guard.h  frame_pool.cpp  frame_pool.h
src/core/: media_state.h  player.cpp  player.h  sync_manager.cpp  sync_manager.h
src/decoder/: audio_decoder.cpp  audio_decoder.h  codec_utils.h  decoder.cpp  decoder.h  video_decoder.cpp  video_decoder.h
src/platform/mac/: mac_renderer.cpp  mac_renderer.h
src/render/: render_factory.h  renderer.h
src/render/platform/mac/: mac_renderer.cpp  mac_renderer.h
src/util/frame/: frame_converter.cpp  frame_converter.h  frame_guard.h  frame_pool.cpp  frame_pool.h  save_image.cpp  save_image.h
test/: getest_verify.cpp
